--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "^14.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "ts-pattern": "^5.0.4"
+    "ts-pattern": "^5.0.4",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
